--- a/network/05.md
+++ b/network/05.md
@@ -1,3 +1,3 @@
-dig slash16.org
+dig slash 16.org | grep -m1  SERVER | awk '{print $3}' | awk -F '[()]' '{print $2}'
 
 //	The line with SERVER: xxx.x.x.xx#xx shows the IP ADDR and port of reponding DNS server.
