some alterations due to old PDF

--- a/network/11.md
+++ b/network/11.md
@@ -1,3 +1,4 @@
 <!-- It is the router: -->
 <!-- On my Telkom Router it is _gateway -->
 <!-- On my fiber it is DeviceDHCP.Home-->
+<!-- on mac it says NAT -->
