--- a/system/23.md
+++ b/system/23.md
@@ -1,8 +1,24 @@
-Graphical session:
-Search settings.
-Go to system settings.
-Search users.
-Go into account details.
-Add user.
-Fill in details.
-Click "apply". 
+# Create the new user on the VM using:
+sudo adduser <username>
+
+# How to connect to GUI on (Debian) VM
+# Install the following on your VM for X11 forwarding 
+sudo apt-get install xorg
+sudo apt-get install openbox
+# Add these to VM /etc/ssh_config
+X11Forwarding yes
+X11DisplayOffset 10
+PrintMotd no
+PrintLastLog yes
+TCPKeepAlive yes
+# restart ssh
+sudo service ssh restart
+# exit current session
+exit
+# Use -X to ssh in along side GUI session
+ssh -X -i <path to key> <user name>@<ip>
+# Test using GUI vim
+# Install gvim to test
+sudo apt-get install vim-gtk
+# Run gvim
+gvim test.txt
