added extar comment to network 13

--- a/network/13.md
+++ b/network/13.md
@@ -1,5 +1,6 @@
 dig +short myip.opendns.com @resolver1.opendns.com | xargs dig -x | grep -Po 'PTR.+'
 
+<!-- only works on telkom for some reason. -->
 <!-- gives the following output -->
 
 PTR	67-184-105-169.north.dsl.telkomsa.net.
