ready as I will ever be.

--- a/system/08.md
+++ b/system/08.md
@@ -1,3 +1,7 @@
 ~/.ssh/id_rsa
 
-Is the file. for the rsa keys other keys would be in suitably named files.
+<!-- or -->
+
+~/.ssh/authorized_keys
+
+<!-- Is the file. for the rsa keys other keys would be in suitably named files. -->
