--- a/system/14.md
+++ b/system/14.md
@@ -1,5 +1,4 @@
-<!-- Run tail in background and detach it from the current terminal -->
-tail -f /var/log/syslog </dev/null &>/dev/null &
+sudo tail -f /var/log/syslog &
 
 <!-- run -->
 jobs
