--- a/system/23.md
+++ b/system/23.md
@@ -22,3 +22,6 @@ ssh -X -i <path to key> <user name>@<ip>
 sudo apt-get install vim-gtk
 # Run gvim
 gvim test.txt
+
+<!-- doesn't work for me so I: -->
+<!-- search user and go into user settings and add user. -->
